@@ -1,3 +1,8 @@
+2002-10-31  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-gpg-context.c: Renamed stdin to stdin_fd, stdout to
+	stdout_fd, and stderr to stderr_fd to be more portable.
+
 2002-10-30  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-filter-html.c (html_convert): Rewrote to use regex for
